<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sender_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/form_padding"
    android:background="@color/form_background"
    tools:context=".SenderInfoActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:padding="10dp"
        android:text="@string/sender_details"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold"
        android:background="@drawable/rounded_headerbg"
        android:layout_marginBottom="50dp"
        />
    <EditText
        android:id="@+id/sender_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="@dimen/edittext_margin"
        android:layout_marginEnd="@dimen/edittext_margin"
        android:autofillHints=""
        android:hint="@string/sender_email"
        android:background="@drawable/rounded_edittext"
        android:inputType="textEmailAddress"
        android:padding="@dimen/edittext_padding"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/sender_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="@dimen/edittext_margin"
        android:layout_marginEnd="@dimen/edittext_margin"
        android:autofillHints=""
        android:hint="@string/sender_name"
        android:background="@drawable/rounded_edittext"
        android:inputType="text"
        android:padding="@dimen/edittext_padding"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/sender_contactinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="@dimen/edittext_margin"
        android:layout_marginEnd="@dimen/edittext_margin"
        android:autofillHints=""
        android:hint="@string/sender_phone"
        android:background="@drawable/rounded_edittext"
        android:inputType="phone"
        android:padding="@dimen/edittext_padding" />

    <EditText
        android:id="@+id/sender_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="@dimen/edittext_margin"
        android:layout_marginEnd="@dimen/edittext_margin"
        android:autofillHints=""
        android:hint="@string/sender_country"
        android:background="@drawable/rounded_edittext"
        android:inputType="text"
        android:padding="@dimen/edittext_padding" />

    <EditText
        android:id="@+id/sender_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="@dimen/edittext_margin"
        android:layout_marginEnd="@dimen/edittext_margin"
        android:autofillHints=""
        android:hint="@string/sender_address"
        android:background="@drawable/rounded_edittext"
        android:inputType="text"
        android:padding="@dimen/edittext_padding" />

    <Button
        android:id="@+id/sender_btn"
        android:layout_width="200dp"
        android:layout_height="@dimen/button_height"
        android:text="@string/next"
        android:backgroundTint="@color/button_color"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="30sp" />
</LinearLayout>
