<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/form_padding"
    android:background="@color/form_background"
    tools:context=".ReviewInfoActivity">

    <TextView
        android:id="@+id/tv_review_info"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@color/button_color"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/review_information"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_review_info"
        android:layout_marginTop="16dp">

        <TableLayout
            android:id="@+id/tbl_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            >

            <TableRow>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textStyle="bold"
                    android:padding="8dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/country"
                    android:textStyle="bold"
                    android:padding="8dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textStyle="bold"
                    android:padding="8dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_info"
                    android:textStyle="bold"
                    android:padding="8dp" />
            </TableRow>

        </TableLayout>
    </ScrollView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="end|bottom"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="32dp"
            android:background="@drawable/ic_circle_fab"
            android:contentDescription="@string/todo"
            android:onClick="goToSenderInfo"
            android:src="@drawable/ic_add"
            app:shapeAppearance="@drawable/ic_add"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</RelativeLayout>
